Bug 961983 - Crude fix to suppress UTF-16. r=mkmelin